parser.output
Terminals unused in grammar

   INC
   DEC


Grammar

    0 $accept: program $end

    1 program: PROGRAM declarations S statements END

    2 err_stmt: error SEMICOLON
    3         | error ')'

    4 type: INT
    5     | FLOAT
    6     | BOOL

    7 const_dec: CONST type IDENTIFIER '=' inum
    8          | CONST type IDENTIFIER '=' fnum
    9          | CONST type IDENTIFIER '=' bval

   10 var_dec: type IDENTIFIER

   11 declaration: const_dec
   12            | var_dec

   13 declarations: %empty
   14             | declarations declaration SEMICOLON
   15             | declarations err_stmt

   16 statements: %empty
   17           | statements statement SEMICOLON
   18           | statements err_stmt

   19 statement: assignment
   20          | if_stmt
   21          | while_stsmt
   22          | do_while_stmt
   23          | for_stmt
   24          | switch_stmt
   25          | BREAK
   26          | CONTINUE

   27 bval: TRUE
   28     | FALSE

   29 assignment: IDENTIFIER '=' expr
   30           | IDENTIFIER '=' bval

   31 fnum: FNUM
   32     | MINUS FNUM

   33 inum: INUM
   34     | MINUS INUM

   35 number: fnum
   36       | inum

   37 expr: fnum
   38     | inum
   39     | IDENTIFIER
   40     | expr PLUS expr
   41     | expr MINUS expr
   42     | expr MUL expr
   43     | expr DIV expr
   44     | expr GT expr
   45     | expr GTE expr
   46     | expr LT expr
   47     | expr LTE expr
   48     | expr NE expr
   49     | expr EQ expr
   50     | expr EQ TRUE
   51     | expr EQ FALSE
   52     | expr NE TRUE
   53     | expr NE FALSE
   54     | expr AND expr
   55     | expr OR expr
   56     | NOT expr
   57     | '(' expr ')'

   58 $@1: %empty

   59 if_: IF '(' expr $@1 ')' THEN statements

   60 if_else: ENDIF

   61 $@2: %empty

   62 if_else: ELSE $@2 statements ENDIF

   63 if_stmt: if_ if_else

   64 $@3: %empty

   65 $@4: %empty

   66 $@5: %empty

   67 while_stsmt: WHILE $@3 '(' expr $@4 ')' '{' $@5 statements '}'

   68 $@6: %empty

   69 $@7: %empty

   70 $@8: %empty

   71 $@9: %empty

   72 do_while_stmt: DO '{' $@6 statements '}' $@7 WHILE '(' $@8 expr $@9 ')'

   73 s_stmt: cases default
   74       | cases

   75 $@10: %empty

   76 case: CASE inum COLON $@10 statements

   77 cases: %empty
   78      | cases case

   79 default: DEFAULT COLON statements

   80 $@11: %empty

   81 $@12: %empty

   82 switch_stmt: SWITCH '(' IDENTIFIER $@11 ')' '{' $@12 s_stmt '}'

   83 $@13: %empty

   84 $@14: %empty

   85 $@15: %empty

   86 $@16: %empty

   87 for_stmt: FOR '(' IDENTIFIER $@13 '=' expr $@14 COLON expr COLON number $@15 ')' '{' $@16 statements '}'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 57 59 67 72 82 87
')' (41) 3 57 59 67 72 82 87
'=' (61) 7 8 9 29 30 87
'{' (123) 67 72 82 87
'}' (125) 67 72 82 87
error (256) 2 3
SEMICOLON (258) 2 14 17
END (259) 1
PROGRAM (260) 1
CONST (261) 7 8 9
S (262) 1
INC (263)
DEC (264)
INT (265) 4
FLOAT (266) 5
BOOL (267) 6
AND (268) 54
OR (269) 55
NOT (270) 56
WHILE (271) 67 72
IF (272) 59
THEN (273) 59
ELSE (274) 62
ENDIF (275) 60 62
SWITCH (276) 82
CASE (277) 76
DEFAULT (278) 79
BREAK (279) 25
CONTINUE (280) 26
PLUS (281) 40
MINUS (282) 32 34 41
MUL (283) 42
DIV (284) 43
GTE (285) 45
LTE (286) 47
GT (287) 44
LT (288) 46
EQ (289) 49 50 51
NE (290) 48 52 53
COLON (291) 76 79 87
DO (292) 72
FOR (293) 87
FNUM (294) 31 32
INUM (295) 33 34
TRUE (296) 27 50 52
FALSE (297) 28 51 53
IDENTIFIER (298) 7 8 9 10 29 30 39 82 87


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
err_stmt (51)
    on left: 2 3, on right: 15 18
type (52)
    on left: 4 5 6, on right: 7 8 9 10
const_dec (53)
    on left: 7 8 9, on right: 11
var_dec (54)
    on left: 10, on right: 12
declaration (55)
    on left: 11 12, on right: 14
declarations (56)
    on left: 13 14 15, on right: 1 14 15
statements (57)
    on left: 16 17 18, on right: 1 17 18 59 62 67 72 76 79 87
statement (58)
    on left: 19 20 21 22 23 24 25 26, on right: 17
bval (59)
    on left: 27 28, on right: 9 30
assignment (60)
    on left: 29 30, on right: 19
fnum (61)
    on left: 31 32, on right: 8 35 37
inum (62)
    on left: 33 34, on right: 7 36 38 76
number (63)
    on left: 35 36, on right: 87
expr (64)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57, on right: 29 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 59 67 72 87
if_ (65)
    on left: 59, on right: 63
$@1 (66)
    on left: 58, on right: 59
if_else (67)
    on left: 60 62, on right: 63
$@2 (68)
    on left: 61, on right: 62
if_stmt (69)
    on left: 63, on right: 20
while_stsmt (70)
    on left: 67, on right: 21
$@3 (71)
    on left: 64, on right: 67
$@4 (72)
    on left: 65, on right: 67
$@5 (73)
    on left: 66, on right: 67
do_while_stmt (74)
    on left: 72, on right: 22
$@6 (75)
    on left: 68, on right: 72
$@7 (76)
    on left: 69, on right: 72
$@8 (77)
    on left: 70, on right: 72
$@9 (78)
    on left: 71, on right: 72
s_stmt (79)
    on left: 73 74, on right: 82
case (80)
    on left: 76, on right: 78
$@10 (81)
    on left: 75, on right: 76
cases (82)
    on left: 77 78, on right: 73 74 78
default (83)
    on left: 79, on right: 73
switch_stmt (84)
    on left: 82, on right: 24
$@11 (85)
    on left: 80, on right: 82
$@12 (86)
    on left: 81, on right: 82
for_stmt (87)
    on left: 87, on right: 23
$@13 (88)
    on left: 83, on right: 87
$@14 (89)
    on left: 84, on right: 87
$@15 (90)
    on left: 85, on right: 87
$@16 (91)
    on left: 86, on right: 87


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . declarations S statements END

    $default  reduce using rule 13 (declarations)

    declarations  go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM declarations . S statements END
   14 declarations: declarations . declaration SEMICOLON
   15             | declarations . err_stmt

    error  shift, and go to state 5
    CONST  shift, and go to state 6
    S      shift, and go to state 7
    INT    shift, and go to state 8
    FLOAT  shift, and go to state 9
    BOOL   shift, and go to state 10

    err_stmt     go to state 11
    type         go to state 12
    const_dec    go to state 13
    var_dec      go to state 14
    declaration  go to state 15


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 err_stmt: error . SEMICOLON
    3         | error . ')'

    SEMICOLON  shift, and go to state 16
    ')'        shift, and go to state 17


State 6

    7 const_dec: CONST . type IDENTIFIER '=' inum
    8          | CONST . type IDENTIFIER '=' fnum
    9          | CONST . type IDENTIFIER '=' bval

    INT    shift, and go to state 8
    FLOAT  shift, and go to state 9
    BOOL   shift, and go to state 10

    type  go to state 18


State 7

    1 program: PROGRAM declarations S . statements END

    $default  reduce using rule 16 (statements)

    statements  go to state 19


State 8

    4 type: INT .

    $default  reduce using rule 4 (type)


State 9

    5 type: FLOAT .

    $default  reduce using rule 5 (type)


State 10

    6 type: BOOL .

    $default  reduce using rule 6 (type)


State 11

   15 declarations: declarations err_stmt .

    $default  reduce using rule 15 (declarations)


State 12

   10 var_dec: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 20


State 13

   11 declaration: const_dec .

    $default  reduce using rule 11 (declaration)


State 14

   12 declaration: var_dec .

    $default  reduce using rule 12 (declaration)


State 15

   14 declarations: declarations declaration . SEMICOLON

    SEMICOLON  shift, and go to state 21


State 16

    2 err_stmt: error SEMICOLON .

    $default  reduce using rule 2 (err_stmt)


State 17

    3 err_stmt: error ')' .

    $default  reduce using rule 3 (err_stmt)


State 18

    7 const_dec: CONST type . IDENTIFIER '=' inum
    8          | CONST type . IDENTIFIER '=' fnum
    9          | CONST type . IDENTIFIER '=' bval

    IDENTIFIER  shift, and go to state 22


State 19

    1 program: PROGRAM declarations S statements . END
   17 statements: statements . statement SEMICOLON
   18           | statements . err_stmt

    error       shift, and go to state 5
    END         shift, and go to state 23
    WHILE       shift, and go to state 24
    IF          shift, and go to state 25
    SWITCH      shift, and go to state 26
    BREAK       shift, and go to state 27
    CONTINUE    shift, and go to state 28
    DO          shift, and go to state 29
    FOR         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31

    err_stmt       go to state 32
    statement      go to state 33
    assignment     go to state 34
    if_            go to state 35
    if_stmt        go to state 36
    while_stsmt    go to state 37
    do_while_stmt  go to state 38
    switch_stmt    go to state 39
    for_stmt       go to state 40


State 20

   10 var_dec: type IDENTIFIER .

    $default  reduce using rule 10 (var_dec)


State 21

   14 declarations: declarations declaration SEMICOLON .

    $default  reduce using rule 14 (declarations)


State 22

    7 const_dec: CONST type IDENTIFIER . '=' inum
    8          | CONST type IDENTIFIER . '=' fnum
    9          | CONST type IDENTIFIER . '=' bval

    '='  shift, and go to state 41


State 23

    1 program: PROGRAM declarations S statements END .

    $default  reduce using rule 1 (program)


State 24

   67 while_stsmt: WHILE . $@3 '(' expr $@4 ')' '{' $@5 statements '}'

    $default  reduce using rule 64 ($@3)

    $@3  go to state 42


State 25

   59 if_: IF . '(' expr $@1 ')' THEN statements

    '('  shift, and go to state 43


State 26

   82 switch_stmt: SWITCH . '(' IDENTIFIER $@11 ')' '{' $@12 s_stmt '}'

    '('  shift, and go to state 44


State 27

   25 statement: BREAK .

    $default  reduce using rule 25 (statement)


State 28

   26 statement: CONTINUE .

    $default  reduce using rule 26 (statement)


State 29

   72 do_while_stmt: DO . '{' $@6 statements '}' $@7 WHILE '(' $@8 expr $@9 ')'

    '{'  shift, and go to state 45


State 30

   87 for_stmt: FOR . '(' IDENTIFIER $@13 '=' expr $@14 COLON expr COLON number $@15 ')' '{' $@16 statements '}'

    '('  shift, and go to state 46


State 31

   29 assignment: IDENTIFIER . '=' expr
   30           | IDENTIFIER . '=' bval

    '='  shift, and go to state 47


State 32

   18 statements: statements err_stmt .

    $default  reduce using rule 18 (statements)


State 33

   17 statements: statements statement . SEMICOLON

    SEMICOLON  shift, and go to state 48


State 34

   19 statement: assignment .

    $default  reduce using rule 19 (statement)


State 35

   63 if_stmt: if_ . if_else

    ELSE   shift, and go to state 49
    ENDIF  shift, and go to state 50

    if_else  go to state 51


State 36

   20 statement: if_stmt .

    $default  reduce using rule 20 (statement)


State 37

   21 statement: while_stsmt .

    $default  reduce using rule 21 (statement)


State 38

   22 statement: do_while_stmt .

    $default  reduce using rule 22 (statement)


State 39

   24 statement: switch_stmt .

    $default  reduce using rule 24 (statement)


State 40

   23 statement: for_stmt .

    $default  reduce using rule 23 (statement)


State 41

    7 const_dec: CONST type IDENTIFIER '=' . inum
    8          | CONST type IDENTIFIER '=' . fnum
    9          | CONST type IDENTIFIER '=' . bval

    MINUS  shift, and go to state 52
    FNUM   shift, and go to state 53
    INUM   shift, and go to state 54
    TRUE   shift, and go to state 55
    FALSE  shift, and go to state 56

    bval  go to state 57
    fnum  go to state 58
    inum  go to state 59


State 42

   67 while_stsmt: WHILE $@3 . '(' expr $@4 ')' '{' $@5 statements '}'

    '('  shift, and go to state 60


State 43

   59 if_: IF '(' . expr $@1 ')' THEN statements

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 66


State 44

   82 switch_stmt: SWITCH '(' . IDENTIFIER $@11 ')' '{' $@12 s_stmt '}'

    IDENTIFIER  shift, and go to state 67


State 45

   72 do_while_stmt: DO '{' . $@6 statements '}' $@7 WHILE '(' $@8 expr $@9 ')'

    $default  reduce using rule 68 ($@6)

    $@6  go to state 68


State 46

   87 for_stmt: FOR '(' . IDENTIFIER $@13 '=' expr $@14 COLON expr COLON number $@15 ')' '{' $@16 statements '}'

    IDENTIFIER  shift, and go to state 69


State 47

   29 assignment: IDENTIFIER '=' . expr
   30           | IDENTIFIER '=' . bval

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    TRUE        shift, and go to state 55
    FALSE       shift, and go to state 56
    IDENTIFIER  shift, and go to state 63

    bval  go to state 70
    fnum  go to state 64
    inum  go to state 65
    expr  go to state 71


State 48

   17 statements: statements statement SEMICOLON .

    $default  reduce using rule 17 (statements)


State 49

   62 if_else: ELSE . $@2 statements ENDIF

    $default  reduce using rule 61 ($@2)

    $@2  go to state 72


State 50

   60 if_else: ENDIF .

    $default  reduce using rule 60 (if_else)


State 51

   63 if_stmt: if_ if_else .

    $default  reduce using rule 63 (if_stmt)


State 52

   32 fnum: MINUS . FNUM
   34 inum: MINUS . INUM

    FNUM  shift, and go to state 73
    INUM  shift, and go to state 74


State 53

   31 fnum: FNUM .

    $default  reduce using rule 31 (fnum)


State 54

   33 inum: INUM .

    $default  reduce using rule 33 (inum)


State 55

   27 bval: TRUE .

    $default  reduce using rule 27 (bval)


State 56

   28 bval: FALSE .

    $default  reduce using rule 28 (bval)


State 57

    9 const_dec: CONST type IDENTIFIER '=' bval .

    $default  reduce using rule 9 (const_dec)


State 58

    8 const_dec: CONST type IDENTIFIER '=' fnum .

    $default  reduce using rule 8 (const_dec)


State 59

    7 const_dec: CONST type IDENTIFIER '=' inum .

    $default  reduce using rule 7 (const_dec)


State 60

   67 while_stsmt: WHILE $@3 '(' . expr $@4 ')' '{' $@5 statements '}'

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 75


State 61

   56 expr: NOT . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 76


State 62

   57 expr: '(' . expr ')'

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 77


State 63

   39 expr: IDENTIFIER .

    $default  reduce using rule 39 (expr)


State 64

   37 expr: fnum .

    $default  reduce using rule 37 (expr)


State 65

   38 expr: inum .

    $default  reduce using rule 38 (expr)


State 66

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr
   59 if_: IF '(' expr . $@1 ')' THEN statements

    AND    shift, and go to state 78
    OR     shift, and go to state 79
    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    MUL    shift, and go to state 82
    DIV    shift, and go to state 83
    GTE    shift, and go to state 84
    LTE    shift, and go to state 85
    GT     shift, and go to state 86
    LT     shift, and go to state 87
    EQ     shift, and go to state 88
    NE     shift, and go to state 89

    $default  reduce using rule 58 ($@1)

    $@1  go to state 90


State 67

   82 switch_stmt: SWITCH '(' IDENTIFIER . $@11 ')' '{' $@12 s_stmt '}'

    $default  reduce using rule 80 ($@11)

    $@11  go to state 91


State 68

   72 do_while_stmt: DO '{' $@6 . statements '}' $@7 WHILE '(' $@8 expr $@9 ')'

    $default  reduce using rule 16 (statements)

    statements  go to state 92


State 69

   87 for_stmt: FOR '(' IDENTIFIER . $@13 '=' expr $@14 COLON expr COLON number $@15 ')' '{' $@16 statements '}'

    $default  reduce using rule 83 ($@13)

    $@13  go to state 93


State 70

   30 assignment: IDENTIFIER '=' bval .

    $default  reduce using rule 30 (assignment)


State 71

   29 assignment: IDENTIFIER '=' expr .
   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr

    AND    shift, and go to state 78
    OR     shift, and go to state 79
    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    MUL    shift, and go to state 82
    DIV    shift, and go to state 83
    GTE    shift, and go to state 84
    LTE    shift, and go to state 85
    GT     shift, and go to state 86
    LT     shift, and go to state 87
    EQ     shift, and go to state 88
    NE     shift, and go to state 89

    $default  reduce using rule 29 (assignment)


State 72

   62 if_else: ELSE $@2 . statements ENDIF

    $default  reduce using rule 16 (statements)

    statements  go to state 94


State 73

   32 fnum: MINUS FNUM .

    $default  reduce using rule 32 (fnum)


State 74

   34 inum: MINUS INUM .

    $default  reduce using rule 34 (inum)


State 75

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr
   67 while_stsmt: WHILE $@3 '(' expr . $@4 ')' '{' $@5 statements '}'

    AND    shift, and go to state 78
    OR     shift, and go to state 79
    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    MUL    shift, and go to state 82
    DIV    shift, and go to state 83
    GTE    shift, and go to state 84
    LTE    shift, and go to state 85
    GT     shift, and go to state 86
    LT     shift, and go to state 87
    EQ     shift, and go to state 88
    NE     shift, and go to state 89

    $default  reduce using rule 65 ($@4)

    $@4  go to state 95


State 76

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr
   56     | NOT expr .

    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    MUL    shift, and go to state 82
    DIV    shift, and go to state 83
    GTE    shift, and go to state 84
    LTE    shift, and go to state 85
    GT     shift, and go to state 86
    LT     shift, and go to state 87
    EQ     shift, and go to state 88
    NE     shift, and go to state 89

    $default  reduce using rule 56 (expr)


State 77

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr
   57     | '(' expr . ')'

    AND    shift, and go to state 78
    OR     shift, and go to state 79
    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    MUL    shift, and go to state 82
    DIV    shift, and go to state 83
    ')'    shift, and go to state 96
    GTE    shift, and go to state 84
    LTE    shift, and go to state 85
    GT     shift, and go to state 86
    LT     shift, and go to state 87
    EQ     shift, and go to state 88
    NE     shift, and go to state 89


State 78

   54 expr: expr AND . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 97


State 79

   55 expr: expr OR . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 98


State 80

   40 expr: expr PLUS . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 99


State 81

   41 expr: expr MINUS . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 100


State 82

   42 expr: expr MUL . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 101


State 83

   43 expr: expr DIV . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 102


State 84

   45 expr: expr GTE . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 103


State 85

   47 expr: expr LTE . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 104


State 86

   44 expr: expr GT . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 105


State 87

   46 expr: expr LT . expr

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 106


State 88

   49 expr: expr EQ . expr
   50     | expr EQ . TRUE
   51     | expr EQ . FALSE

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    TRUE        shift, and go to state 107
    FALSE       shift, and go to state 108
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 109


State 89

   48 expr: expr NE . expr
   52     | expr NE . TRUE
   53     | expr NE . FALSE

    NOT         shift, and go to state 61
    MINUS       shift, and go to state 52
    '('         shift, and go to state 62
    FNUM        shift, and go to state 53
    INUM        shift, and go to state 54
    TRUE        shift, and go to state 110
    FALSE       shift, and go to state 111
    IDENTIFIER  shift, and go to state 63

    fnum  go to state 64
    inum  go to state 65
    expr  go to state 112


State 90

   59 if_: IF '(' expr $@1 . ')' THEN statements

    ')'  shift, and go to state 113


State 91

   82 switch_stmt: SWITCH '(' IDENTIFIER $@11 . ')' '{' $@12 s_stmt '}'

    ')'  shift, and go to state 114


State 92

   17 statements: statements . statement SEMICOLON
   18           | statements . err_stmt
   72 do_while_stmt: DO '{' $@6 statements . '}' $@7 WHILE '(' $@8 expr $@9 ')'

    error       shift, and go to state 5
    WHILE       shift, and go to state 24
    IF          shift, and go to state 25
    SWITCH      shift, and go to state 26
    BREAK       shift, and go to state 27
    CONTINUE    shift, and go to state 28
    '}'         shift, and go to state 115
    DO          shift, and go to state 29
    FOR         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31

    err_stmt       go to state 32
    statement      go to state 33
    assignment     go to state 34
    if_            go to state 35
    if_stmt        go to state 36
    while_stsmt    go to state 37
    do_while_stmt  go to state 38
    switch_stmt    go to state 39
    for_stmt       go to state 40


State 93

   87 for_stmt: FOR '(' IDENTIFIER $@13 . '=' expr $@14 COLON expr COLON number $@15 ')' '{' $@16 statements '}'

    '='  shift, and go to state 116


State 94

   17 statements: statements . statement SEMICOLON
   18           | statements . err_stmt
   62 if_else: ELSE $@2 statements . ENDIF

    error       shift, and go to state 5
    WHILE       shift, and go to state 24
    IF          shift, and go to state 25
    ENDIF       shift, and go to state 117
    SWITCH      shift, and go to state 26
    BREAK       shift, and go to state 27
    CONTINUE    shift, and go to state 28
    DO          shift, and go to state 29
    FOR         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31

    err_stmt       go to state 32
    statement      go to state 33
    assignment     go to state 34
    if_            go to state 35
    if_stmt        go to state 36
    while_stsmt    go to state 37
    do_while_stmt  go to state 38
    switch_stmt    go to state 39
    for_stmt       go to state 40


State 95

   67 while_stsmt: WHILE $@3 '(' expr $@4 . ')' '{' $@5 statements '}'

    ')'  shift, and go to state 118


State 96

   57 expr: '(' expr ')' .

    $default  reduce using rule 57 (expr)


State 97

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   54     | expr AND expr .
   55     | expr . OR expr

    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    MUL    shift, and go to state 82
    DIV    shift, and go to state 83
    GTE    shift, and go to state 84
    LTE    shift, and go to state 85
    GT     shift, and go to state 86
    LT     shift, and go to state 87
    EQ     shift, and go to state 88
    NE     shift, and go to state 89

    $default  reduce using rule 54 (expr)


State 98

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr
   55     | expr OR expr .

    AND    shift, and go to state 78
    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    MUL    shift, and go to state 82
    DIV    shift, and go to state 83
    GTE    shift, and go to state 84
    LTE    shift, and go to state 85
    GT     shift, and go to state 86
    LT     shift, and go to state 87
    EQ     shift, and go to state 88
    NE     shift, and go to state 89

    $default  reduce using rule 55 (expr)


State 99

   40 expr: expr . PLUS expr
   40     | expr PLUS expr .
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr

    MUL  shift, and go to state 82
    DIV  shift, and go to state 83

    $default  reduce using rule 40 (expr)


State 100

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   41     | expr MINUS expr .
   42     | expr . MUL expr
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr

    MUL  shift, and go to state 82
    DIV  shift, and go to state 83

    $default  reduce using rule 41 (expr)


State 101

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   42     | expr MUL expr .
   43     | expr . DIV expr
   44     | expr . GT expr
   45     | expr . GTE expr
   46     | expr . LT expr
   47     | expr . LTE expr
   48     | expr . NE expr
   49     | expr . EQ expr
   50     | expr . EQ TRUE
   51     | expr . EQ FALSE
   52     | expr . NE TRUE
   53     | expr . NE FALSE
   54     | expr . AND expr
   55     | expr . OR expr

    $default  reduce using rule 42 (expr)


State 102
